--- a/templates/admin.html
+++ b/templates/admin.html
@@ -219,6 +219,7 @@
                             <button type="submit" class="save-btn" name="save">Save</button>
                         </form>
                     </div>
+                    <br> <!-- Added new line after each record -->
                 {% endfor %}
             </div>
             {% if message %}
